# teleport

./: package.json
src/: App.tsx  main.tsx  theme.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: command.rs  lib.rs  main.rs
src/file_upload/: FileAttachment.tsx  FileUpload.tsx  index.ts  index.types.ts
src/style/: styles.css
